crates/wgso/tests/cases_invalid/wgsl_compilation/.expected
error: same name `duplicated` used for two storage variables
--> ./tests/cases_invalid/wgsl_compilation/duplicated_buffers/module1.wgsl
 |
 |
::: ./tests/cases_invalid/wgsl_compilation/duplicated_buffers/module2.wgsl
 |
 |
error: declaration of `error` needs a type specifier or initializer
 --> ./tests/cases_invalid/wgsl_compilation/imported_error.wgsl:1:5
  |
1 | var error;
  |     ^^^^^ needs a type specifier or initializer
  |
error: override constants are not supported by WGSO
--> ./tests/cases_invalid/wgsl_compilation/override_constants.wgsl
 |
 |
error: Function [0] 'increment' is invalid
 --> ./tests/cases_invalid/wgsl_compilation/validation.wgsl:3:1
  |
3 | / fn increment(value: ptr<storage, u32>) {
4 | |     *value += 1;
  | |________________^ naga::ir::Function [0]
  |
  = info: Argument 'value' at index 0 is a pointer of space Storage { access: StorageAccess(LOAD) }, which can't be passed into functions.
  = info: The error comes from file './tests/cases_invalid/wgsl_compilation/validation.wgsl'